# turbompc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  check_install.py  pyproject.toml  requirements.txt
benchmarking/: README.md
benchmarking/acados_env/: Dockerfile  README.md  build.sh  entrypoint.sh  requirements.txt  run.sh
benchmarking/linear-system/: benchmark_acados_constrained.py  benchmark_acados_gradient_accuracy.py  benchmark_mpcpytorch_constrained.py  benchmark_naming.py  benchmark_problem_setup.py  benchmark_turbompc_constrained.py  benchmark_turbompc_gradient_accuracy.py  compare_gradients.py  run_sweeps_gradient_accuracy.sh  run_sweeps_oat_acados.sh  run_sweeps_oat_mpcpytorch.sh  run_sweeps_oat_turbompc.sh  timing_linear.py  utils.py
benchmarking/linear-system/plot_results/: load_results.py  plot_fig_drone.py  plot_fig_linear_system.py  plot_gradient_accuracy.py  plot_utils.py
docs/: API.md  build_guide.md  cuda_backends.md
examples/: RL_quadrotor.ipynb  RL_spacecraft.ipynb  drone_obstacles.ipynb  drone_utils.py
examples/pointmass_rl/: README.md  optimizer.py  plot_figures.py  pointmass_rl.ipynb  pointmass_rl.py  policy.py
examples/pointmass_rl/outputs/: pointmass_apg_500.csv  pointmass_apg_500_theta.npz
tests/: conftest.py
tests/cuda/backends/: test_admm_cudss_ffi.py  test_admm_math_cuda_vs_python.py  test_backward_cudss_chunking.py  test_cuda_coverage.py  test_cudss_ffi_backend.py  test_cudss_sparse_kkt_cache.py  test_ffi_gradients.py  test_pcg_ffi_backend.py
tests/cuda/helpers/: processors.py  test_processors.py
tests/cuda/solvers/: test_differentiable.py  test_full_hessian_backward.py  test_stress_large_horizon.py  test_turbompc_solver_backends.py
tests/helpers/: assertions.py  backend_utils.py  constants.py  ocp_fixtures.py  problem_fixtures.py  schur_fixtures.py  solver_fixtures.py
tests/python/dynamics/: test_dynamics.py  test_integrators.py
tests/python/problems/: test_optimal_control.py
tests/python/solvers/: test_admm.py  test_admm_residuals.py  test_dynamics_hessian_integrator.py  test_fd_grad_diagnosis.py  test_inequality_hessian.py  test_solver_pcg.py  test_solver_sqp_diffmpc.py  test_solver_sqp_osqp.py  test_timevaryingbounds_ineqs.py  test_turbompc_solver.py
tests/python/utils/: test_box_bounds_shapes.py  test_linear_solve.py  test_qp_utils_pack_unpack.py  test_rescaling.py  test_utils.py
turbompc/dynamics/: cartpole_dynamics.py  drone_dynamics.py  integrators.py  linear_dynamics.py  quadrotor_dynamics.py  spacecraft_dynamics.py
turbompc/problems/: obstacle_avoidance.py  optimal_control_problem.py
turbompc/problems/params/: cartpole.yaml  drone.yaml  linear.yaml  linear_implicit.yaml  quadrotor.yaml  required_parameters.yaml  spacecraft.yaml  spacecraft_constrained.yaml
turbompc/solvers/: __init__.py  linesearch.py  qp_data.py  qp_utils.py  sqp_diffmpc.py  sqp_osqp.py  turbompc_solver.py
turbompc/solvers/admm/: __init__.py  admm.py  admm_cudss_ffi_backend.py  admm_ffi_backend.py
turbompc/solvers/admm/csrc/: admm_cudss.cu  admm_cudss.cuh  admm_cudss_ffi.cc  admm_ffi.cc  admm_fused.cu  admm_fused.cuh  admm_math.cuh  admm_reductions.cuh
turbompc/solvers/backward/: __init__.py  backward_kkt_csr.py  backward_kkt_cudss_ffi.py  backward_kkt_jax.py
turbompc/solvers/backward/csrc/: cudss_sparse_kkt.cu  cudss_sparse_kkt.cuh  cudss_sparse_kkt_ffi.cc
turbompc/solvers/csrc/: CMakeLists.txt  post_build_check.py
turbompc/solvers/csrc/common/: block_tridi.cu  block_tridi.cuh
turbompc/solvers/linear_systems_solvers/: __init__.py  backends.py  cudss_ffi_backend.py  linear_solve.py  pcg_dual.py  pcg_ffi_backend.py  pcg_primal.py  schur_solver.py
turbompc/solvers/linear_systems_solvers/csrc/: cudss_blktridi.cu  cudss_blktridi.cuh  cudss_ffi.cc  pcg_blktridi.cu  pcg_blktridi.cuh  pcg_ffi.cc
turbompc/solvers/params/: sqp.yaml  sqp_osqp.yaml  turbompc.yaml
turbompc/utils/: gradient_finitediff.py  load_params.py  timing.py
